# minicraft

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  main.cpp
.cache/clangd/index/: main.cpp.C2CF8337B63FEE44.idx
MMOClient/: CMakeCache.txt  CMakeLists.txt  MMOClient.cpp  Makefile  cmake_install.cmake
MMOServer/: MMOCommon.h
NetClient/: SimpleClient  SimpleClient.cpp
NetCommon/: net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_thread_safe_queue.h  olc_net.h
NetServer/: SimpleServer  SimpleServer.cpp
include/: olcPGEX_TransformedView.h  olcPixelGameEngine.h
main.dSYM/Contents/Resources/DWARF/: main
